Add type module to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ctf-blog",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "local": "VITE_LOCAL=true vite",
